# tarikhbot

./: .env.template  .gitignore  Procfile  README.md  main.py  main2.py  manage.py  pyproject.toml  requirements.txt  text.py
apps/finance/: __init__.py  models.py  services.py
apps/shared/: __init__.py  enums.py
apps/tasks/: __init__.py  models.py  services.py
apps/users/: __init__.py  google.py  models.py  services.py
bot/: __init__.py  client.py
bot/handlers/: __init__.py  auth.py  common.py  finance.py  google.py  tasks.py
bot/keyboards/: __init__.py  common.py  finance.py  tasks.py
bot/messages/: __init__.py  common.py  finance.py  tasks.py
config/: __init__.py  logging.py  scheduler.py  settings.py
database/: __init__.py  models.py
