[project]
name = "workino"
version = "0.1.0"
description = "hi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogoogle>=5.15.0",
    "aiohttp>=3.11.18",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.40.1",
    "google-auth-oauthlib>=1.2.2",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.15.0",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "pydantic>=2.11.4",
    "pyrogram>=2.0.106",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pytz-deprecation-shim>=0.1.0.post0",
    "reportlab>=4.4.1",
    "tgcrypto>=1.2.5",
    "tortoise-orm>=0.25.0",
    "typing-extensions>=4.13.2",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "weasyprint>=65.1",
]
